--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,9 +57,12 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter_native_splash:
-  color: "#42a5f5"
+  color: "#ffffff"
   image: assets/logo.png
-  android: true
+  android_12:
+    color: "#ffffff"
+    image: assets/logo.png
+
 
 flutter:
 
